# pl-jit-compiler

./: .gitignore  .gitlab-ci.yml
pljit/: CMakeLists.txt  Executor.cpp  Executor.hpp  Pljit.cpp  Pljit.hpp
pljit/execution/: ExecutionContext.cpp  ExecutionContext.hpp
pljit/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
pljit/optimization/: optimization_pass.cpp  optimization_pass.hpp
pljit/optimization/passes/: UnaryPlusRemoval.cpp  UnaryPlusRemoval.hpp  constant_propagation.cpp  constant_propagation.hpp  dead_code_elimination.cpp  dead_code_elimination.hpp
pljit/parser/: dot_print_visitor.cpp  dot_print_visitor.hpp  parse_tree_nodes.cpp  parse_tree_nodes.hpp  parse_tree_visitor.cpp  parse_tree_visitor.hpp  parser.cpp  parser.hpp  parser_fwd.hpp
pljit/semantic_analysis/: AST.cpp  AST.hpp  ASTCreator.cpp  ASTCreator.hpp  ast_creation_visitor.cpp  ast_creation_visitor.hpp  ast_fwd.hpp  ast_visitor.hpp  dot_print_visitor.cpp  dot_print_visitor.hpp  symbol_table.cpp  symbol_table.hpp
pljit/source_management/: SourceCode.cpp  SourceCode.hpp  source_code.cpp  source_code.hpp
test/: CMakeLists.txt  TestExecutor.cpp  TestInterface.cpp  TestOptimization.cpp
test/lexer/: TestLexer.cpp
test/parser/: TestParser.cpp
test/semantic_analysis/: TestSemanticAnalysis.cpp
test/source_management/: TestSourceManagement.cpp
